AC_INIT([libunittest], [0.1], [marco.giusti@posteo.de])
AM_INIT_AUTOMAKE([foreign -Wall -Werror])
AC_CONFIG_MACRO_DIR([m4])
AM_PROG_AR
AC_PROG_CC
LT_INIT
AC_REQUIRE_AUX_FILE([tap-driver.sh])
AC_CONFIG_HEADERS([config.h])
AC_CONFIG_FILES([Makefile
                 src/Makefile
                 tests/Makefile
                 docs/Doxyfile
                 docs/examples/Makefile])
AC_OUTPUT
