AM_CFLAGS = -Wall -Werror
lib_LTLIBRARIES = libunittest.la
libunittest_la_SOURCES = apue.c \
						 case.c \
						 list.c \
						 loader.c \
						 main.c \
						 result.c \
						 runner.c \
						 suite.c \
						 unittest.h \
						 unittest_priv.h
libunittest_la_LDFLAGS = -version-info 0:0:0
include_HEADERS = unittest.h

